Created short courses info section

--- a/index.html
+++ b/index.html
@@ -103,9 +103,43 @@
         <section class="short-courses">
             <div class="shrt-courses-info">
                 <h2>Short Courses We Offer</h2>
+                <div class="line"></div>
                 <p>Our eight week intensive certificate course is open to senior high school graduates, tertiary students, school
                 graduates, workers and the general public.</p>
                 <h3>Evening and Weekend Sessions only</h3>
+            </div>
+            <div class="shrt-courses-container">
+                <div class="shrt-c-title">
+                    <h2>Join Our Short Course Program</h2>
+                    <div class="line"></div>
+                </div>
+                <div class="programme-cols">
+                    <div class="p-col">
+                        <div class="ico-n-txt">
+                            <img src="assets/images/ico1.svg" alt="ico1">
+                            <p>Introduction to Programming</p>
+                        </div>
+                        <p>
+                            Our instructors have years of industry experience which presents students with a unique opportunity of learning from the
+                            best
+                        </p>
+                    </div>
+                    <div class="p-col">
+                        <div class="ico-n-txt">
+                            <img src="assets/images/ico1.svg" alt="ico1">
+                            <p>Introduction to Programming</p>
+                        </div>
+                        <p>
+                            Our instructors have years of industry experience which presents students with a unique opportunity of learning
+                            from the
+                            best
+                        </p>
+                    </div>
+                    
+                </div>
+                <div class="reg-btn">
+                        <a href="short-courses.html">Register Now</a>
+                </div>
             </div>
         </section>
     </main>
