Finished short courses section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 </div>
                 <div class="p-info">
                     <p>
-                        Our eight week intensive certificate course is open to senior high school graduates, tertiary students, school
-                        graduates, workers and the general public.
+                        Our eight week intensive certificate course is open to graduates, secondary school students & the general public.
                     </p>
                 </div>
                 <div>
@@ -60,9 +59,7 @@
                 </div>
                 <div class="p-info">
                     <p>
-                        Our eight week intensive certificate course is open to senior high school graduates, tertiary students,
-                        school
-                        graduates, workers and the general public.
+                        Open the door to sought-after technology careers with a world-class Bachelor of Science in Computer Science degree.
                     </p>
                 </div>
                 <div>
@@ -75,9 +72,7 @@
                 </div>
                 <div class="p-info">
                     <p>
-                        Our eight week intensive certificate course is open to senior high school graduates, tertiary students,
-                        school
-                        graduates, workers and the general public.
+                        Embrace world class gradate education with unique blend of cutting-edge research and industry experience.
                     </p>
                 </div>
                 <div>
@@ -90,9 +85,7 @@
                 </div>
                 <div class="p-info">
                     <p>
-                        Our eight week intensive certificate course is open to senior high school graduates, tertiary students,
-                        school
-                        graduates, workers and the general public.
+                        Our PHDs lead the effort to extend the boundaries of knowledge through quality and industry relevant research.
                     </p>
                 </div>
                 <div>
@@ -109,30 +102,34 @@
                 <h3>Evening and Weekend Sessions only</h3>
             </div>
             <div class="shrt-courses-container">
+                <div class="shrt-img-container">
+                    <img src="assets/images/PHOTO-2019-03-04-14-45-13 2.jpg" alt="short-courses">
+                </div>
                 <div class="shrt-c-title">
                     <h2>Join Our Short Course Program</h2>
                     <div class="line"></div>
+                    <p>To be able to take full advantage of the opportunities available to this technology driven era, it is important to
+                    acquire new skills. Skills in ICT that will springboard your career
+                    </p>
                 </div>
                 <div class="programme-cols">
                     <div class="p-col">
                         <div class="ico-n-txt">
-                            <img src="assets/images/ico1.svg" alt="ico1">
-                            <p>Introduction to Programming</p>
+                            <img src="assets/images/graduation-hat.svg" alt="ico1">
+                            <h2>Expert instructors</h2>
                         </div>
                         <p>
                             Our instructors have years of industry experience which presents students with a unique opportunity of learning from the
-                            best
+                            best.
                         </p>
                     </div>
                     <div class="p-col">
                         <div class="ico-n-txt">
-                            <img src="assets/images/ico1.svg" alt="ico1">
-                            <p>Introduction to Programming</p>
+                            <img src="assets/images/cert.svg" alt="ico1">
+                            <h2>Certification</h2>
                         </div>
                         <p>
-                            Our instructors have years of industry experience which presents students with a unique opportunity of learning
-                            from the
-                            best
+                            You earn a certificate of completion from the department after completing and passing the prescribed exam.
                         </p>
                     </div>
                     
@@ -142,7 +139,64 @@
                 </div>
             </div>
         </section>
+        <section class="short-courses-ls">
+            <div class="course-item">
+                <div class="course-i-img-container">
+                    <img class="course-item-img" src="assets/images/Web Dev.png" alt="course-image">
+                </div>
+                <div class="item-txt-container">
+                    <div class="item-title">
+                        <h2>Web Programming</h2>
+                    </div>
+                    <div class="item-info">
+                        <p>Understand the fundamentals of web technologies and create web-based applications with latest technologies.
+                    </div>
+                </div>   
+            </div>
+            <div class="course-item">
+                <div class="course-i-img-container">
+                    <img class="course-item-img" src="assets/images/CCNA.png" alt="course-image">
+                </div>
+                <div class="item-txt-container">
+                    <div class="item-title">
+                        <h2>Computer Network Fundamental[CCNA]</h2>
+                    </div>
+                    <div class="item-info">
+                        <p>We provide quality training for students to become a Cisco Certified Network Associate (CCNA).
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="course-item">
+                <div class="course-i-img-container">
+                    <img class="course-item-img" src="assets/images/Cyber Security.jpg" alt="course-image">
+                </div>
+                <div class="item-txt-container">
+                    <div class="item-title">
+                        <h2>Information Security and Ethical Hacking</h2>
+                    </div>
+                    <div class="item-info">
+                        <p>Learn the various techniques used to secure a computer system from attacks through hacking.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="course-item">
+                <div class="course-i-img-container">
+                   <img class="course-item-img" src="assets/images/Mobile App Dev.jpg" alt="course-image"> 
+                </div>
+                <div class="item-txt-container">
+                    <div class="item-title">
+                        <h2>Mobile Development</h2>
+                    </div>
+                    <div class="item-info">
+                        <p>We provide world class technologies for Mobile Application Development using the mobile-first worklight by IBM.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-   
+    
 </body>
 </html>
