--- a/index.html
+++ b/index.html
@@ -198,6 +198,83 @@
             </div>
         </section>
     </main>
-    
+    <footer class="footer">
+        <div class="ft-rw-container">
+            <div class="ft-rw-cols">
+                <h2>Academics</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Undergraduate</a></li>
+                    <li><a href="">Graduate Courses(MPhil Computer Science)</a></li>
+                    <li><a href="">Graduate Courses(MSc Computer Science)</a></li>
+                    <li><a href="">Graduate Courses(PhD Computer Science)</a></li>
+                    <li><a href="">Academic Calender</a></li>
+                        <li><a href="">Timetable</a></li>
+                    <li><a href="">Placement for Level 200</a></li>
+                    <li><a href="">Student Complaint Form</a></li>
+                </ul>
+            </div>
+            <div class="ft-rw-cols">
+                <h2>Admissions</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Undergraduate</a></li>
+                    <li><a href="">Graduate</a></li>
+                        <li><a href="">International Students</a></li>
+                    <li><a href="">Entry Requirements</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="ft-rw-cols">
+                <h2>Research</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Research at DCS</a></li>
+                    <li><a href="">Research Impacts</a></li>
+                    <li><a href="">Libraries</a></li>
+                </ul>
+            </div>
+            <div class="ft-rw-cols">
+                <h2>About the Department</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Introducing DCS</a></li>
+                    <li><a href="">Head of Department's Office</a></li>
+                    <li><a href="">Faculty</a></li>
+                    <li><a href="">Events</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="ft-rw-container">
+            <div class="ft-rw-cols">
+                <h2>Newsletter</h2>
+                <p class="nwl-p">Stay updated with us</p>
+                <div class="col-content">
+                    <form action="">
+                        <input type="email" required placeholder="Enter your email">
+                        <button type="button" class="submit-btn">
+                            <img src="" alt="arrow">
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="ft-rw-cols">
+                <h2>Contact Us</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Introducing DCS</a></li>
+                    <li><a href="">Head of Department's Office</a></li>
+                    <li><a href="">Faculty</a></li>
+                    <li><a href="">Events</a></li>
+                </ul>
+            </div>
+            <div class="ft-rw-cols">
+                <h2>Location</h2>
+                <ul class="ft-ul">
+                    <li><a href="">Introducing DCS</a></li>
+                    <li><a href="">Head of Department's Office</a></li>
+                    <li><a href="">Facul class="ft-ul"ty</a></li>
+                    <li><a href="">Events</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="ft-rw-container">
+        </div>
+    </footer>
 </body>
 </html>
