--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </p>
                 </div>
                 <div>
-                    <a href="undergrad.html">Read More</a>
+                    <a href="short-courses.html">Read More</a>
                 </div>
             </div>
             <div class="programe">
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div>
-                    <a href="undergrad.html">Read More</a>
+                    <a href="msc-mphil.html">Read More</a>
                 </div>
             </div>
             <div class="programe">
@@ -90,7 +90,7 @@
                     </p>
                 </div>
                 <div>
-                    <a href="undergrad.html">Read More</a>
+                    <a href="phd.html">Read More</a>
                 </div>
             </div>
         </section>
@@ -203,41 +203,41 @@
             <div class="ft-rw-cols">
                 <h2>Academics</h2>
                 <ul class="ft-ul">
-                    <li><a href="">Undergraduate</a></li>
-                    <li><a href="">Graduate Courses(MPhil Computer Science)</a></li>
-                    <li><a href="">Graduate Courses(MSc Computer Science)</a></li>
-                    <li><a href="">Graduate Courses(PhD Computer Science)</a></li>
-                    <li><a href="">Academic Calender</a></li>
-                        <li><a href="">Timetable</a></li>
-                    <li><a href="">Placement for Level 200</a></li>
-                    <li><a href="">Student Complaint Form</a></li>
+                    <li><a href="undergrad.html">Undergraduate</a></li>
+                    <li><a href="msc-mphil.html">Graduate Courses(MPhil Computer Science)</a></li>
+                    <li><a href="msc-mphil.html">Graduate Courses(MSc Computer Science)</a></li>
+                    <li><a href="phd.html">Graduate Courses(PhD Computer Science)</a></li>
+                    <li><a href="https://wwww.ug.edu.gh" target="_blank" rel="noopener">Academic Calender</a></li>
+                        <li><a href="https://wwww.timetableapp.sts.ug.edu.gh" target="_blank" rel="noopener">Timetable</a></li>
+                    <li><a href="https://dcs.ug.edu.gh" target="_blank" rel="noopener">Placement for Level 200</a></li>
+                    <li><a href="undergrad.html">Student Complaint Form</a></li>
                 </ul>
             </div>
             <div class="ft-rw-cols">
                 <h2>Admissions</h2>
                 <ul class="ft-ul">
-                    <li><a href="">Undergraduate</a></li>
-                    <li><a href="">Graduate</a></li>
-                        <li><a href="">International Students</a></li>
-                    <li><a href="">Entry Requirements</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="undergrad.html">Undergraduate</a></li>
+                    <li><a href="msc-mphil.html">Graduate</a></li>
+                        <li><a href="undergrad.html">International Students</a></li>
+                    <li><a href="https://www.ug.edu.gh">Entry Requirements</a></li>
+                    <li><a href="about.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="ft-rw-cols">
                 <h2>Research</h2>
                 <ul class="ft-ul">
-                    <li><a href="">Research at DCS</a></li>
-                    <li><a href="">Research Impacts</a></li>
-                    <li><a href="">Libraries</a></li>
+                    <li><a href="research-groups.html">Research at DCS</a></li>
+                    <li><a href="research-groups.html">Research Impacts</a></li>
+                    <li><a href="research-groups.html">Libraries</a></li>
                 </ul>
             </div>
             <div class="ft-rw-cols">
                 <h2>About the Department</h2>
                 <ul class="ft-ul">
-                    <li><a href="">Introducing DCS</a></li>
-                    <li><a href="">Head of Department's Office</a></li>
-                    <li><a href="">Faculty</a></li>
-                    <li><a href="">Events</a></li>
+                    <li><a href="index.html">Introducing DCS</a></li>
+                    <li><a href="index.html">Head of Department's Office</a></li>
+                    <li><a href="faculty.html">Faculty</a></li>
+                    <li><a href="events.html">Events</a></li>
                 </ul>
             </div>
         </div>
@@ -273,7 +273,10 @@
                 </ul>
             </div>
         </div>
-        <div class="ft-rw-container">
+        <div class="ft-rw-copy">
+            <p>Department Of Computer Science</p>
+            <p>&copy;2023</p>
+            <p>All rights Reserved</p>
         </div>
     </footer>
 </body>
