Added actual text instead of text placeholder

--- a/research-groups.html
+++ b/research-groups.html
@@ -27,8 +27,11 @@
             <div class="info-text">
                 <h1>Research at DCS</h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, aspernatur maiores voluptate tempore, eligendi reiciendis delectus laborum illo asperiores voluptatum et rerum hic id itaque ullam voluptatem qui enim veniam?
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae reiciendis atque nobis modi perspiciatis error, praesentium exercitationem asperiores libero fugiat amet distinctio unde aliquid? Labore minus rem reprehenderit non aspernatur.
+                    Researching at the University of Ghana's Department of Computer Science is an exciting and rewarding experience. The
+                    department has a diverse range of research groups that are dedicated to exploring cutting-edge technologies and
+                    developing innovative solutions to real-world problems.<span class="no-mobile"><br>One of the research areas of the department is <em>Intelligent Space and Machine Learning</em>. This group focuses on developing intelligent systems that can learn from data and make predictions. They work on a wide range of applications,
+                    including natural language processing, computer vision, and robotics.<br>Another research group is <em>Data Science/Big Data Analytics</em>. This group is dedicated to developing techniques for analyzing large datasets and extracting insights from them. They work on a wide range of applications, including healthcare, finance, and social media.<br>The <em>Networking and Communications Engineering</em> group is focused on developing new technologies for communication networks. They work on a wide range of applications, including wireless networks, mobile networks, and the internet of things.<br>Finally, the <em>Cyber Security</em> group is dedicated to developing new techniques for securing computer systems and networks.<br>They work on a wide range of applications, including network security, cryptography, and malware analysis.</span><br>The Department of Computer Science  offers a world-class education in computer science, with a range of undergraduate and graduate programs. Whether you are interested in pursuing a career in academia or industry, the department has something to offer.<br>So why not join us today and be part of the next generation of computer
+                    scientists?
                 </p>
                 <div class="reg-btn">
                     <a href="#research-form">Join our Research Groups</a>
