Fixed autocomplete for form

--- a/research-groups.html
+++ b/research-groups.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="form-col">
                             <label for="phone">Phone number</label>
-                            <input class="input" type="tel" placeholder="Phone number" inputmode="tel" id="phone" required autocomplete="mobile">
+                            <input class="input" type="tel" placeholder="Phone number" inputmode="tel" id="phone" required autocomplete="tel-country-code">
                             <label for="email">Email:</label>
                             <input class="input" type="email"  placeholder="Email" id="email" required autocomplete="email">
                             <label for="additional">More Info</label>
