Implemented Mobile Nav

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src="scripts/header.js"></script>
+    <script src="scripts/nav-mobile.js"></script>
     <main>
         <section class="hero">
             <div class="hero-image">
