--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <script src="scripts/header.js"></script>
+    <script src="scripts/nav-mobile.js"></script>
     <main class="main">
         <section class="hero">       
             <div class="hero-video">
