--- a/research-groups.html
+++ b/research-groups.html
@@ -15,6 +15,7 @@
 
 <body>
     <script src="scripts/header.js"></script>
+    <script src="scripts/nav-mobile.js"></script>
     <main>
         <section class="hero">
             <div class="research-overlay"></div>
