--- a/template.html
+++ b/template.html
@@ -15,6 +15,7 @@
 
 <body>
     <script src="scripts/header.js"></script>
+    <script src="scripts/nav-mobile.js"></script>
     <main>
 
     </main>
