Implemented Mobile Nav

--- a/faculty.html
+++ b/faculty.html
@@ -15,6 +15,7 @@
 
 <body>
     <script src="scripts/header.js"></script>
+    <script src="scripts/nav-mobile.js"></script>
     <main>
         <section class="hero">
             <div class="events-overlay"></div>
@@ -23,8 +24,12 @@
                 <h2>Inroducing DCS</h2>
             </div>
         </section>
-        <section>
-            
+        <section class="facult-info">
+            <h1>The DCS Faculty</h1>
+            <p>
+                The Department of Computer Science at the University of Ghana has a diverse and accomplished faculty. The faculty members are experts in their respective fields and are dedicated to providing students with a world-class education in
+                computer science.<br>
+            </p>
         </section>
     </main>
     <script src="scripts/footer.js"></script>
