Changes to undergad page

--- a/undergrad.html
+++ b/undergrad.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/general.css">
     <link rel="stylesheet" type="text/css" href="css/undergrad.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon">
     <title>UG | Department Of Computer Science</title>
   </head>
@@ -15,11 +16,68 @@
     <script src="scripts/header.js"></script>
     <script src="scripts/nav-mobile.js"></script>
     <main>
-      <section class="hero">
+      
+      <section class="hero-programmes">
         <div class="events-overlay"></div>
-        <div class="hero-text-container">
-          <h1>Events</h1>
-          <h2>Upcoming and Past Events</h2>
+        <div class="hero-programmes-text-container">
+          <h1>Undergraduate Programmes</h1>
+          <h2>Undergraduate Courses at DCS</h2>
+        </div>
+      </section>
+      <section class="programmes">
+        <div class="programe">
+          <div class="p-title">
+            <h2>Short courses</h2>
+          </div>
+          <div class="p-info">
+            <p>
+              Our eight week intensive certificate course is open to graduates, secondary school students & the general
+              public.
+            </p>
+          </div>
+          <div>
+            <a href="short-courses.html">Read More</a>
+          </div>
+        </div>
+        <div class="programe">
+          <div class="p-title">
+            <h2>Undergraduate Courses</h2>
+          </div>
+          <div class="p-info">
+            <p>
+              Open the door to sought-after technology careers with a world-class Bachelor of Science in Computer Science
+              degree.
+            </p>
+          </div>
+          <div>
+            <a href="undergrad.html">Read More</a>
+          </div>
+        </div>
+        <div class="programe">
+          <div class="p-title">
+            <h2>Msc. & M.Phil Courses</h2>
+          </div>
+          <div class="p-info">
+            <p>
+              Embrace world class gradate education with unique blend of cutting-edge research and industry experience.
+            </p>
+          </div>
+          <div>
+            <a href="msc-mphil.html">Read More</a>
+          </div>
+        </div>
+        <div class="programe">
+          <div class="p-title">
+            <h2>PhD Courses</h2>
+          </div>
+          <div class="p-info">
+            <p>
+              Our PHDs lead the effort to extend the boundaries of knowledge through quality and industry relevant research.
+            </p>
+          </div>
+          <div>
+            <a href="phd.html">Read More</a>
+          </div>
         </div>
       </section>
       <section class="abt-undergrad">
@@ -59,7 +117,7 @@
         </div>        
         <div class="it-cs-container">
           <div class="it-cs-cols">
-            <h1>Information Technology</h1>
+            <h1>Computer Science</h1>
             <dl>
               <dt id="level1"><a>Level 100</a></dt>
               <dd>
