Implemented courses.js for phD page

--- a/phd.html
+++ b/phd.html
@@ -448,7 +448,7 @@
                 </div>
                 <div class="img-phd">
                     <div class="phd-img-container">
-                        <img src="assets/images/RProf.jpg">
+                        <img src="assets/images/RProf.jpg" alt="prof">
                     </div>
                     <div class="search-courses-db-container" id="search-courses-db-container">
                         <label class="search-label" for="search-course-search">Search for a course</label>
