Added courses-scripts.js for undergrad page

--- a/undergrad.html
+++ b/undergrad.html
@@ -120,7 +120,7 @@
             <h1>Computer Science</h1>
             <dl>
               <dt id="level1"><a>Level 100</a></dt>
-              <dd>
+              <dd id="table1">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -195,7 +195,7 @@
                 </table>
               </dd>
               <dt id="level2"><a>Level 200</a></dt>
-              <dd>
+              <dd id="table2">
                 <h4>First Semester</h4>
                 <table>
                   <tbody>
@@ -266,7 +266,7 @@
                 </table>
               </dd>
               <dt id="level3"><a>Level 300</a></dt>
-              <dd>
+              <dd id="table3">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -342,7 +342,7 @@
                 </table>
               </dd>
               <dt id="level4"><a>Level 400</a></dt>
-              <dd>
+              <dd id="table4">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -444,7 +444,7 @@
             <h1>Information Technology</h1>
             <dl>
               <dt id="level5"><a>Level 100</a></dt>
-              <dd>
+              <dd id="table5">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -519,7 +519,7 @@
                 </table>
               </dd>
               <dt id="level6"><a>Level 200</a></dt>
-              <dd>
+              <dd id="table6">
                 <h4>First Semester</h4>
                 <table>
                   <tbody>
@@ -590,7 +590,7 @@
                 </table>
               </dd>
               <dt id="level7"><a>Level 300</a></dt>
-              <dd>
+              <dd id="table7">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -666,7 +666,7 @@
                 </table>
               </dd>
               <dt id="level8"><a>Level 400</a></dt>
-              <dd>
+              <dd id="table8">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -765,8 +765,8 @@
             <br /><br /><br />
           </div>
         </div>
+        <script src="scripts/courses-script.js"></script>
     </section>
-    <script src="scripts/courses-script.js"></script>
     </main>
     <script src="scripts/footer.js"></script>
   </body>
