Chnaged ids for table elements

--- a/undergrad.html
+++ b/undergrad.html
@@ -119,8 +119,8 @@
           <div class="it-cs-cols">
             <h1>Computer Science</h1>
             <dl>
-              <dt id="level1"><a>Level 100</a></dt>
-              <dd id="table1">
+              <dt id="levelcs1"><a>Level 100</a></dt>
+              <dd id="tablecs1">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -194,8 +194,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level2"><a>Level 200</a></dt>
-              <dd id="table2">
+              <dt id="levelcs2"><a>Level 200</a></dt>
+              <dd id="tablecs2">
                 <h4>First Semester</h4>
                 <table>
                   <tbody>
@@ -265,8 +265,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level3"><a>Level 300</a></dt>
-              <dd id="table3">
+              <dt id="levelcs3"><a>Level 300</a></dt>
+              <dd id="tablecs3">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -341,8 +341,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level4"><a>Level 400</a></dt>
-              <dd id="table4">
+              <dt id="levelcs4"><a>Level 400</a></dt>
+              <dd id="tablecs4">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -443,8 +443,8 @@
           <div class="it-cs-cols">
             <h1>Information Technology</h1>
             <dl>
-              <dt id="level5"><a>Level 100</a></dt>
-              <dd id="table5">
+              <dt id="levelit1"><a>Level 100</a></dt>
+              <dd id="tableit1">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -518,8 +518,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level6"><a>Level 200</a></dt>
-              <dd id="table6">
+              <dt id="levelit2"><a>Level 200</a></dt>
+              <dd id="tableit2">
                 <h4>First Semester</h4>
                 <table>
                   <tbody>
@@ -589,8 +589,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level7"><a>Level 300</a></dt>
-              <dd id="table7">
+              <dt id="levelit3"><a>Level 300</a></dt>
+              <dd id="tableit3">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
@@ -665,8 +665,8 @@
                   </tbody>
                 </table>
               </dd>
-              <dt id="level8"><a>Level 400</a></dt>
-              <dd id="table8">
+              <dt id="levelit4"><a>Level 400</a></dt>
+              <dd id="tableit4">
                 <h4>First Semester</h4>
                 <h6>ELECTIVES:</h6>
                 <table>
